# felafax

./: .gitignore  Dockerfile  LICENSE  Llama3_1_8b_on_Colab_TPU.ipynb  Llama3_1_8b_on_Free_Colab_TPU.ipynb  README.md  build_and_run.sh  launch_multihost_tuner.sh  launch_tuner.sh  llama3_70b_notebook_trainer.ipynb  llama3_notebook_trainer.ipynb  llama3_tpu.ipynb  llama3_tpu.py  llama3_tpu_works.py  llama3_train.py  new_requirements.txt  pyproject.toml  requirements.txt  setup.py  test_train_mp_imagenet_fsdp.py  🦊_Llama3_1_8b_on_Free_Colab_TPU.ipynb
.archive/llama3_jax/: multihost_trainer.py
.archive/llama3_jax/trainer_engine/: trainer_lib.py
.archive/llama3_pytorch_xla/trainer_lib/: model_partitioning.py
.ipynb_checkpoints/: llama3_tpu-checkpoint.ipynb
LLaMa3/: README.md  llama3_70b_train.ipynb  llama3_8b_train.ipynb  model_partitioning.py  trainer.py
LLaMa3.1/: README.md  llama3_70b_train.ipynb  llama3_8b_train.ipynb
LLaMa3/trainer_lib/: dataset.py  trainer.py
LLaMa3_1/: dataset.py  model.py  model_partitioning.py  trainer.py
docker/: Dockerfile  Dockerfile_jax  Dockerfile_stable  Dockerfile_v1  Dockerfile_v5  Dockerfile_v6
felafax/: prompts.py
felafax/core/models/llama3/jax/: model.py
felafax/projects/llama3_full_finetune/: config.py
felafax/trainer_engine/: base_classes.py  checkpoint.py  configs.py  setup.py  trainer.py  utils.py
felafax/trainer_engine/data/: alpaca.py  base.py  prompts.py
felafax/trainer_engine/models/llama3/jax/: model.py
fsdp_test/: fsdp.py  fsdp_gpt.py  fsdp_peft.py
gemma2/: gemma2_train.ipynb  lorax.ipynb
gemma2/trainer_engine/: training_pipeline.py
llama3.1_jax/: llama3.1_train.ipynb  llama3.1_train.py
llama3.1_jax/trainer_engine/: checkpoint_lib.py  checkpointer.py  config_lib.py  jax_utils.py  llama_model.py  setup.py  training_pipeline.py
llama3_jax/: llama_config.py  llama_model.py  llama_train.py  llama_train_notebook.ipynb  llama_train_notebook.py  multihost_trainer.py  simple_train.py  trainer.py
llama3_jax/trainer_engine/: automodel_lib.py  checkpoint_lib.py  convert_lib.py  dataset_lib.py  jax_utils.py  llama_config.py  llama_model.py  setup.py  trainer_lib.py  utils.py
llama3_pytorch_xla/: README.md  llama3_8b_train.ipynb
misc/assets/amd_405B_run_sep22/: rocm_smi_cleaned_405b_batchsize16_seqlen64.csv
misc/docker/: Dockerfile.jax  Dockerfile.torch  startup.sh
misc/gemma2/: gemma2_train.ipynb
misc/scripts/: build_docker.sh  multihost.sh
notebooks/: Llama3_1_on_Free_Colab_TPU.ipynb
old/: README.md  pyproject.toml
old/llama3_jax/: llama_train_notebook.ipynb
old/llama3_jax/trainer_engine/: checkpoint_lib.py
old/llama3_pytorch_xla/trainer_lib/: model.py
old/misc/gemma2/trainer_engine/: setup.py  utils.py
old/misc/scripts/: build_docker.sh
projects/custom_trainer_example/: pipeline.py
projects/llama3_alpaca_finetune/: dataset.py  pipeline.py  test_alpaca.py  test_dataset.py
scripts/: build_docker.sh  format.sh  gc.sh  multihost.sh  ruff.sh
scripts/docker/: Dockerfile.jax  Dockerfile.torch  startup.sh
shell/: format.sh  lint.sh
src/: launch.py  🦊__Llama3_1_8b_on_Free_Colab_TPU.ipynb
src/configs/: llama-config.yaml
src/core/: base_classes.py  distributed.py
src/felafax/trainer_engine/: checkpoint.py  setup.py  trainer.py  utils.py
src/felafax/trainer_engine/data/: base.py  data.py
src/felafax/trainer_engine/models/llama3/jax/: model.py
src/llama3_jax/: requirements.txt
src/llama3_jax/trainer_engine/: utils.py
src/models/llama/: config.py  dataset_handler.py  model_handler.py  train.py  training_utils.py
src/models/llama/jax_impl/: model.py  trainer.py
src/models/llama/pytorch_impl/: model.py  trainer.py
tests/: fsdp_test.py  test_prompts.py
tests/data/: test_alpaca.py  test_dataset.py  test_prompts.py
tests/integration_tests/: test_dataset.py  test_llama_trainer.py
tests/model/: test_jax_torch_setup.py
tests/model/llama/jax/: test_llama_port.py
tests/trainer/: test_llama_trainer.py
trainers/cli_tuner/: config.json  config.py  config.yaml  dataset.py  pipeline.py
trainers/custom_trainer_example/: dataset.py  pipeline.py  trainer.py
trainers/llama3_alpaca_finetune/: dataset.py  pipeline.py
trainers/llama3_jaison/: config.py  config.yaml  dataset.py  notebook_llama3_jaison.ipynb  pipeline.py  test_data.jsonl
trainers/llama3_medqa/: dataset.py  pipeline.py
trainers/llama3_tune_with_cli/: config.json  config.py  config.yaml  dataset.py  pipeline.py
trainers/trainium_llama/: README.md  dataset.py  pipeline.py
utils/: fsdp.py  spmd.py
utils/.ipynb_checkpoints/: spmd-checkpoint.py
utils/docker/: Dockerfile.jax  Dockerfile.torch  Dockerfile_jax  startup.sh
utils/scripts/: build_docker.sh
~archive/: Llama3_1_8b_on_Free_Colab_TPU.ipynb
~archive/llama3_jax/trainer_engine/: llama_config.py
