[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "felafax"
version = "1.0.12"
description = "felafax"
authors = ["Nithin <nithin@felafax.ai>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/felafax/felafax"
repository = "https://github.com/felafax/felafax"
documentation = "https://github.com/felafax/felafax"
packages = [{include = "felafax", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
datasets = ">=2.18.0"
flax = {extras = ["all"], version = "*"}
requests = "*"
transformers = ">=4.43"
fsspec = "<2024.10.0"
numpy = "^2.1.3"
typing-extensions = "^4.12.2"
urllib3 = "^2.2.3"
aiofiles = "^24.1.0"
cloudpickle = "^3.1.0"
pytest = "^8.3.3"
ruff = "0.2.2"
typeguard = "2.13.3"
memory-profiler = "^0.61.0"
jax = "^0.4.35"
jaxlib = "^0.4.35"
equinox = ">=0.11.8"
optax = "^0.2.4"
orbax = "^0.1.9"
accelerate = ">=0.26.0"
quax = "^0.0.5"
einops = "^0.8.0"
jaxtyping = "0.2.25"
ml-dtypes = "^0.5.0"
ml-collections = "^1.0.0"
huggingface-hub = "^0.26.2"
sentencepiece = "^0.2.0"
matplotlib = "^3.9.2"
tqdm = "^4.67.0"
gcsfs = "<2024.10.0"
pyrallis = "^0.3.1"
absl-py = "^2.1.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.test.dependencies]
pytest = "*"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/felafax/felafax/issues"

[tool.ruff]
line-length = 81
indent-width = 4

[tool.ruff.lint]
ignore = ["C901", "E741", "F402", "F823", "E731"]

[tool.lint.select]
select = ["C", "E", "F", "I", "W"]

exclude = [
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".ipynb_checkpoints",
    ".pyenv",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.lint.isort]
lines-after-imports = 2

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"